Layout fixes on narrow screens

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -34,7 +34,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 650px) {
+@media (min-width: 1000px) {
     .container {
         width: 80%;
     }
